# cw

./: CMakeLists.txt  Color.c  Color.h  Config.c  Config.h  GraphicsIO.c  GraphicsIO.h  GraphicsStructs.h  GraphicsUtils.c  GraphicsUtils.h  IO.c  IO.h  Point.c  Point.h  Tools.c  Tools.h  ToolsManager.c  ToolsManager.h  Utils.c  Utils.h  main.c
